# firefly

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
docs/: application.html  index.html
docs/firefly/: firefly.html  index.html
examples/: sandbox.py
src/firefly/: __init__.py  __init__.pyi  application.py  application.pyi  firefly.py  firefly.pyi
tests/: test_application.py  test_firefly.py
