[tool.poetry]
name = "firefly"
version = "0.1.0"
description = "Firefly is a modern game engine in python."
authors = ["Ashley Morton-Bye <ashley.morton.bye@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ambye85/firefly/"
repository = "https://github.com/ambye85/firefly/"
documentation = "https://ambye85.github.io/firefly/index.html"

[tool.poetry.dependencies]
python = "^3.9"
glfw = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.5"}
flake8 = "^3.9.0"
mypy = "^0.812"
pdoc3 = "^0.9.2"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | _build
  | build
  | dist
  | venv
)/
'''

[tool.coverage.run]
parallel = true
branch = true
source = ["firefly"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]
